# Retrieval-Augmented-Q-A-with-GPT-4-and-LangChain

./: README.md  document_loader.py  gradio_app.py  pyproject.toml  qa_pipeline.py  vector_store.py
db/: chroma.sqlite3
